--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -16,7 +16,18 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+
+    - name: Log in to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
     
+    - name: Create and populate .env file
+      run: |
+        echo "FLASK_ENV=production" >> .env
+        echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+        echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -27,6 +38,7 @@ jobs:
       with:
         app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-      env:
-        SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL }}
-        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+
+    - name: logout
+      run: |
+        az logout
