Update workflow with correct Azure credentials

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -22,12 +22,6 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     
-    - name: Create and populate .env file
-      run: |
-        echo "FLASK_ENV=production" >> .env
-        echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
-        echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
-        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -36,9 +30,9 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-
+        app-name: home-tuition-app-2024
+        package: .
+    
     - name: Azure Logout
       run: |
         az logout
