--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -17,21 +17,33 @@ jobs:
       with:
         python-version: '3.10'
 
+    - name: Create deployment package
+      run: |
+        # Make startup script executable
+        chmod +x startup.sh
+        
+        # Create deployment package
+        zip -r deployment.zip . -x "*.git*"
+
     - name: Azure Login
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: home-tuition-app-2024
-        package: .
+        package: deployment.zip
+        startup-command: ./startup.sh
+
+    - name: Configure Web App
+      run: |
+        az webapp config set --name home-tuition-app-2024 --resource-group home-tuition-rg --linux-fx-version "PYTHON|3.10"
+        az webapp config appsettings set --name home-tuition-app-2024 --resource-group home-tuition-rg --settings \
+          SCM_DO_BUILD_DURING_DEPLOYMENT=true \
+          PYTHON_ENABLE_GUNICORN_MULTIWORKERS=1 \
+          WEBSITES_PORT=8000
     
     - name: Azure Logout
       run: |
